--- a/environment/manifold.env
+++ b/environment/manifold.env
@@ -2,10 +2,10 @@
 # Manifold Service Configuration
 ##########################################################################################
 
-DOMAIN=127.0.0.1:4000
+DOMAIN=manifold.reclaimdemo.jele.site
 
-CLIENT_BROWSER_API_URL=http://127.0.0.1:4000
-CLIENT_BROWSER_API_CABLE_URL=http://127.0.0.1:4000/cable
+CLIENT_BROWSER_API_URL=http://manifold.reclaimdemo.jele.site
+CLIENT_BROWSER_API_CABLE_URL=http://manifold.reclaimdemo.jele.site/cable
 
 SSL_ENABLED=false
 
