--- a/environment/manifold.env
+++ b/environment/manifold.env
@@ -4,10 +4,10 @@
 
 DOMAIN=manifold.reclaimdemo.jele.site
 
-CLIENT_BROWSER_API_URL=http://manifold.reclaimdemo.jele.site
-CLIENT_BROWSER_API_CABLE_URL=http://manifold.reclaimdemo.jele.site/cable
+CLIENT_BROWSER_API_URL=https://manifold.reclaimdemo.jele.site
+CLIENT_BROWSER_API_CABLE_URL=https://manifold.reclaimdemo.jele.site/cable
 
-SSL_ENABLED=false
+SSL_ENABLED=true
 
 API_PORT=3020
 API_SOCKET=/manifold_sockets/manifold-api
